# programming-part-2

lab01/project01/: CMakeLists.txt  main.cpp
lab01/project02/: CMakeLists.txt
lab01/project03/: CMakeLists.txt
lab01/project03/src/: math_utils.cpp
lab01/project04/app/: main.cpp
lab01/project04/lib/: CMakeLists.txt
lab01/project04/tests/: CMakeLists.txt
lab01/variant15/: CMakeCache.txt  CMakeLists.txt  Report.md  vcpkg.json
lab01/variant15/app/: CmakeLists.txt  main.cpp
lab01/variant15/lib/: CMakeLists.txt  shopping_list.cpp  shopping_list.hpp
lab01/variant15/tests/: CMakeLists.txt  test_shopping_list.cpp
lab02/task01/: CMakeLists.txt  main.cpp
lab02/task02/: CMakeLists.txt  main.cpp
lab02/task03/: CMakeLists.txt  main.cpp
lab02/task04/: CMakeLists.txt  main.cpp
lab02/task05/: CMakeLists.txt  main.cpp
lab02/task06/: CMakeLists.txt  main.cpp
lab03/: CMakeLists.txt  Report.md
lab03/assets/: Report.md
lab03/include/: lib.hpp
lab03/src/: lib.cpp
lab03/uml/: Diagram.puml
lab04/: CMakeLists.txt  Report.md  main.cpp
lab04/assets/: Report.md
lab04/include/: lib.hpp
lab04/src/: lib.cpp
lab04/tests/: tests.cpp
lab04/uml/: Diagram.puml
lab05/: CMakeLists.txt  main.cpp
lab05/assets/: Diagram.puml  Report.md
lab05/private/: Customer.cpp  Order.cpp  Product.cpp  Store.cpp  SupportAgent.cpp
lab05/public/: Customer.hpp  Order.hpp  Product.hpp  Store.hpp  SupportAgent.hpp
lab05/tests/: test_order.cpp  test_product.cpp  test_store.cpp
lab06/: CMakeLists.txt  Report.md  main.cpp
lab06/private/: Document.cpp  Header.cpp  Image.cpp  Paragraph.cpp  Table.cpp
lab06/public/: Document.hpp  Header.hpp  Image.hpp  Paragraph.hpp  Table.hpp
lab06/tests/: test_document.cpp
lab06/uml/: Diagram.puml
lab07/: CMakeLists.txt  Report.md  main.cpp
lab07/assets/: Diagram.puml  Report.md
lab07/private/: Building.cpp  CityObject.cpp  IndustrialBuilding.cpp  ResidentialBuilding.cpp
lab07/public/: Building.hpp  CityObject.hpp  IndustrialBuilding.hpp  ResidentialBuilding.hpp
lab07/uml/: Diagram.puml
lab08/: Report.md  main.cpp
lab08/assets/: Report.md
lab08/private/: Building.cpp  CityObject.cpp  IndustrialBuilding.cpp  ResidentialBuilding.cpp
lab08/public/: Building.hpp  CityObject.hpp  IndustrialBuilding.hpp  ResidentialBuilding.hpp
lab08/uml/: Diagram.puml
lab09/: Report.md
lab09/task01/broken_version/: CMakeLists.txt  main.cpp
lab09/task01/broken_version/assets/: wrong_diagram.puml
lab09/task01/broken_version/private/: Device.cpp  InputDevice.cpp  OutputDevice.cpp  TouchDisplay.cpp
lab09/task01/broken_version/public/: Device.hpp  InputDevice.hpp  OutputDevice.hpp  TouchDisplay.hpp
lab09/task01/fixed_version/: CMakeLists.txt  main.cpp
lab09/task01/fixed_version/assets/: correct_diagram.puml
lab09/task01/fixed_version/private/: Device.cpp  TouchDisplay.cpp
lab09/task01/fixed_version/public/: InputDevice.hpp  OutputDevice.hpp
lab09/task02/: CMakeLists.txt  app  main.cpp
lab09/task02/assets/: Diagram.puml
lab09/task02/private/: Appliance.cpp  ClimateSystem.cpp  Cooler.cpp  Heater.cpp  Humidifier.cpp
lab09/task02/public/: Appliance.hpp  ClimateSystem.hpp  Cooler.hpp  Heater.hpp  Humidifier.hpp
lab09/task02/tests/: test_basic.cpp
lab10/: CMakeLists.txt  Report.md  main.cpp
lab10/include/: variant_utils.hpp
lab10/tests/: tests_variant_utils.cpp
lab11/assets/: Report.md  layouts.txt
lab11/part01/: main.cpp
lab11/part01/include/: DictionaryEntry.hpp  FixedDictionary.hpp
lab11/part01/tests/: test.cpp
lab11/part02/: CMakeLists.txt  main.cpp
lab11/part02/include/: DictionaryEntry.hpp  FixedDictionary.hpp
lab11/part02/tests/: test.cpp
lab12/Assets/: Report.md
lab12/task02/: CMakeLists.txt  main.cpp
lab12/task02/private/: DomainTypes.cpp
lab12/task02/tests/: test.cpp
lab12/task03/: CMakeLists.txt  main.cpp
lab12/task03/private/: SampleBuffer.cpp
lab12/task03/public/: SampleBuffer.h
lab12/task03/tests/: test.cpp
lab12/task04/: CMakeLists.txt  main.cpp
lab12/task04/private/: SampleBuffer.cpp
lab12/task04/public/: SampleBuffer.h
lab12/task04/tests/: test.cpp
lab12/task05/: CMakeLists.txt  main.cpp
lab12/task05/private/: SampleBuffer.cpp
lab12/task05/public/: DomainTypes.h  SampleBuffer.h
lab12/task05/tests/: test.cpp
lab12/task06/: CMakeLists.txt  main.cpp
lab12/task06/public/: SimplePtr.h
lab12/task06/tests/: test.cpp
lab12/task07/: main.cpp
lab12/task07/private/: DomainTypes.cpp
lab12/task07/public/: DomainTypes.h
lab12/task07/tests/: test.cpp
lab12/task08/: CMakeLists.txt  main.cpp
lab12/task08/private/: DomainTypes.cpp
lab12/task08/public/: DomainTypes.h
lab12/task08/tests/: test.cpp
lab12/task09/: CMakeLists.txt  main.cpp
lab12/task09/private/: DomainTypes.cpp
lab12/task09/public/: DomainTypes.h
lab12/task09/tests/: test.cpp
lab12/task10/: CMakeLists.txt  main.cpp
lab12/task10/private/: DomainTypes.cpp
lab12/task10/public/: DomainTypes.h
lab12/task10/tests/: test.cpp
lab13/: CMakeLists.txt  Report.md  main.cpp
lab13/data/: expected_report_example.txt  input.txt  report.txt
lab13/private/: Record.cpp  ReportBuilder.cpp  StringUtils.cpp
lab13/public/: Record.h  ReportBuilder.h  StringUtils.h
lab13/tests/: test_text_processing.cpp
